# silicon-internship-2025

./: .gitignore  BACKEND.md  MAJOR_PROJECT.md
h-error_handling/src/: main.rs
i-test_and_file_operation/: Cargo.toml
i-test_and_file_operation/src/: calculator.rs  helper.rs  main.rs  tests.rs
j-intro_to_hyper/: Cargo.toml
j-intro_to_hyper/src/: main.rs
k-intro_to_axum/: Cargo.toml
k-intro_to_axum/src/: main.rs
l-build_apis_with_axum/: Cargo.toml
l-build_apis_with_axum/src/: book.rs  handler.rs  main.rs
m-axum_middleware/: Cargo.toml
m-axum_middleware/auth_middlewares/: Cargo.toml
m-axum_middleware/auth_middlewares/src/: index.html  main.rs
m-axum_middleware/auth_middlewares/src/middleware/: auth.rs
m-axum_middleware/auth_middlewares/src/utils/: basic.rs  config.rs  jwt.rs  mod.rs
m-axum_middleware/basic_middlewares/: Cargo.toml
m-axum_middleware/basic_middlewares/assets/: books.csv
m-axum_middleware/basic_middlewares/src/: book.rs  handler.rs  main.rs  middleware_util.rs
n-api_docs/test_utopia/: Cargo.toml
n-api_docs/test_utopia/src/: main.rs
n-api_docs/test_utopia/src/todo/: handler.rs  mod.rs  model.rs  router.rs  store.rs
o-intro_to_databases/: Cargo.toml
o-intro_to_databases/src/: book.rs  handler.rs  main.rs
p-database_and_orms/basic_crud/: Cargo.toml
p-database_and_orms/basic_crud/src/: docs.rs  main.rs
p-database_and_orms/basic_crud/src/todo/: handler.rs  mod.rs  model.rs  router.rs
p-database_and_orms/crud_with_orm/src/: main.rs
p-database_and_orms/crud_with_orm/src/entity/: mod.rs  todos.rs
p-database_and_orms/crud_with_orm/src/todo/: config.rs  handler.rs  middleware.rs  router.rs
q-database_migrations/: Cargo.toml
q-database_migrations/migration/src/: lib.rs  m20250705_022130_create_users_table.rs  m20250705_023505_create_products_table.rs  m20250705_023514_create_orders_table.rs  m20250705_023520_create_order_items_table.rs
q-database_migrations/src/: database.rs  main.rs
q-database_migrations/src/entities/: mod.rs  order_items.rs  orders.rs  prelude.rs  products.rs  users.rs
r-deployment/: Cargo.toml
r-deployment/src/: docs.rs
r-deployment/src/entity/: prelude.rs
r-deployment/src/todo/: model.rs
z-custom-examples/: GUIDE.md
z-custom-examples/shibani_24bcsg42/customer_support_system/: .env  Cargo.toml
z-custom-examples/shibani_24bcsg42/customer_support_system/src/: API.rs  README.md  api.rs  auth.rs  doc.rs  error_handle.rs  main.rs  routes.rs
z-custom-examples/shibani_24bcsg42/customer_support_system/src/entity/: analytics.rs  audit_logs.rs  communications.rs  customers.rs  knowledge_base.rs  mod.rs  prelude.rs  tags.rs  tickets.rs  users.rs
z-custom-examples/shibani_24bcsg42/file deduplicator/: Cargo.toml  README.md
z-custom-examples/shibani_24bcsg42/src/: main.rs
