[package]
name = "o-intro_to_databases"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version="0.8.4", features = ["macros", "json"]}
tokio = { version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = {version = "*", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono"]}