[package]
name = "auth_middlewares"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }

tower-http = { version = "0.6.6", features = ["full"] }

thiserror = "2"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
base64 = "0.22.1"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
