[package]
name = "basic_middlewares"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version="0.8.4" }
tokio = { version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.1"

tower = "0.5"
tower-http = { version = "0.6.6", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

thiserror = "2"