[package]
name = "basic_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-axum = { version = "0.2.0" }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
dotenvy = "0.15.7"
chrono = { version = "0.4", features = ["serde"] }

hyper = { version = "1.0.1", features = ["full"] }
tower = "0.5"
openssl = { version = "0.10", features = ["vendored"] }
