[package]
name = "customer_support_system"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features = ["full" ,"macros"]}
axum = {version = "0.8" , features = ["macros","json"]}
sea-orm = { version = "1.1.13", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "chrono"]}
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio", "macros"] }
uuid = {version = "1.17.0", features=["v4"]}
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
once_cell = "1.19"
async-trait = "0.1"
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = { version = "0.2.0" }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
anyhow = "1.0.98"


[dev-dependencies]
sea-orm-cli = "1.1.13"
